# gsRender

./: .gitignore  CMakeLists.txt  README.md  app.cpp
include/: 3dgs.hpp  3dgs_quad.hpp  EntitylFactory.hpp  camera.hpp  dataset.hpp  mainMenu.hpp  modelLoader.hpp  shader.hpp  widget.hpp
include/ECS/: CModel.hpp  CTransform.hpp  ECSRegistry.hpp  RenderSystem.hpp  component.hpp
shader/: fragment_instanced_quad.shader  instanced_quad.fs  instanced_quad.vs  simple_instanced_quad.fs  simple_instanced_quad.vs  vertex_instanced_quad.shader
shader/point/: pointSpirit.vs  pointSpiritInstanced.fs  pointSpiritInstanced.vs
source/: 3dgs_quad.cpp  RenderSystem.cpp  mainMenu.cpp  modelLoader.cpp  shader.cpp  widget.cpp
